--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/dist/output.css" rel="stylesheet">
-    <title>Cedar Company Limited - Admin Portal</title>
+    <title>Cedar Inspection Ventures - Admin Portal</title>
   </head>
   <body>
     <div id="root"></div>
